--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,10 @@
 <h1>All Products</h1>
 <ul>
   <% @products.each do |product| %>
-    <li><%= link_to product.title, product_path(product) %> - $<%= product.price %>, Stock: <%= product.stock_quantity %></li>
+    <li>
+      <%= link_to product.title, product_path(product) %> -
+      $<%= product.price %>, Stock: <%= product.stock_quantity %>,
+      Category: <%= product.category.name %>
+    </li>
   <% end %>
 </ul>
