--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,3 +2,4 @@
 <p><%= @product.description %></p>
 <p>Price: $<%= @product.price %></p>
 <p>Stock: <%= @product.stock_quantity %></p>
+<p>Category: <%= @product.category.name %></p>
